<resources>
    <string name="app_name">SuperMarketApp</string>
    <string name="image_login">Image login</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_your_password"><u>Olvido la contraseña?</u></string>
    <string name="login">Iniciar sesión</string>
    <string name="registration_here">Si aún no tienes cuenta. <u>Registrate aqui</u></string>
    <string name="facebook_image">Facebook image</string>
    <string name="twitter_image">Twitter image</string>
    <string name="google_image">Google image</string>
    <string name="name_user">Nombre</string>
    <string name="password_register">Contraseña</string>
    <string name="repeat_password_register">Repetir contraseña</string>
    <string name="register_button">Registrarse</string>
    <string name="logo_add_products">Logo añadir productos</string>
    <string name="name_product">Nombre del producto</string>
    <string name="obligatory">Obligatorio</string>
    <string name="category_products">Categoria del prodcuto</string>
    <string name="quantity">Cantidad</string>
    <string name="kg_and_unities">Kg, Unidades, etc..</string>
    <string name="price">Precio</string>
    <string name="button_add">Añadir</string>
    <string name="name_prod_table">Producto</string>
    <string name="total_price_table">Precio total</string>
    <string name="image_list_fav">Imagen de la lista</string>
    <string name="product_list">Lista compra</string>
    <string name="add_products">Añadir productos</string>
    <string name="add_list_fav">Aniadir a favoritos</string>
    <string name="helper_text_register">Mínimo 6 caracteres</string>
    <string name="delete_product">Eliminar producto</string>
    <string name="send">Enviar</string>
    <string name="pref_file">Pref_key_file</string>
</resources>