<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/green"
        android:stretchColumns="1,2,3,4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tr_title">

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/name_prod_table"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_column="1" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/quantity"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_column="2" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_column="3" />

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/total_price_table"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_column="4" />

        </TableRow>

        <TableRow
            android:id="@+id/tr_content">

            <!-- here is the content of each column and row in dynamic form  -->

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>